tests/paczka1/fuzzy1/48524733.err
Error in line 3: eMYVGxauLs S80 46,6
Error in line 16: 7J5Q A30 41,6
Error in line 31: amgbG S80 275,08
Error in line 18: 7J5Q A81 8,5
